[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polus-render"
version = "0.0.3"
authors = [
  { name="Jeff Chen", email="Jeff.Chen@axleinfo.com" }
]
description = "Displays Polus Render dashboard in Jupyter Notebooks."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Documentation" = "https://github.com/jcaxle/polus-render"