[project]
name = "polus-render"
version = "0.0.3.5.6"
authors = [
  { name="Jeff Chen", email="Jeff.Chen@axleinfo.com" },
]
description = "Displays Polus Render dashboard in Jupyter Notebooks."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jcaxle/polus-render"

[tool.setuptools]
include-package-data = true
