[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["polus"]
namespaces = true

[project]
name = "polus-render"
version = "0.0.4.0.1.5"
authors = [
  { name="Jeff Chen", email="Jeff.Chen@axleinfo.com" },
]
description = "Displays Polus Render dashboard in Jupyter Notebooks."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "polus-server-ext @ git+https://github.com/jcaxle/polus-server-ext.git@integration"
]


[project.urls]
"Homepage" = "https://github.com/jcaxle/polus-render"

[tool.setuptools]
include-package-data = true
